Limit allconfig target to Raspberry Pi 1,3-5.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24042 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/Makefile
+++ b/bootkernel/kernel/Makefile
@@ -159,14 +159,12 @@ build: $(KERNEL_WORK)/build.done
 # Refresh kernel configuration files
 
 allconfig:
-	# Old 32-bit targets
 	#$(MAKE) oldconfig reallyclean BOARDNAME=BeagleBone
-	#$(MAKE) oldconfig reallyclean BOARDNAME=RaspberryPi1
-	#$(MAKE) oldconfig reallyclean BOARDNAME=RaspberryPi1Gadget
+	#$(MAKE) oldconfig reallyclean BOARDNAME=BeaglePlay
+	#$(MAKE) oldconfig reallyclean BOARDNAME=OrangePiZero2W
+	$(MAKE) oldconfig reallyclean BOARDNAME=RaspberryPi1
+	$(MAKE) oldconfig reallyclean BOARDNAME=RaspberryPi1Gadget
 	#$(MAKE) oldconfig reallyclean BOARDNAME=RaspberryPi2
-	# Current 64-bit targets
-	$(MAKE) oldconfig reallyclean BOARDNAME=BeaglePlay
-	$(MAKE) oldconfig reallyclean BOARDNAME=OrangePiZero2W
 	$(MAKE) oldconfig reallyclean BOARDNAME=RaspberryPi3
 	$(MAKE) oldconfig reallyclean BOARDNAME=RaspberryPi3Gadget
 	$(MAKE) oldconfig reallyclean BOARDNAME=RaspberryPi4
