Use latest DotNetConfig and MySql.Data.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24050 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/examples/csharp/programs/test_temperature_mysql/test_temperature_mysql.csproj
+++ b/examples/csharp/programs/test_temperature_mysql/test_temperature_mysql.csproj
@@ -13,9 +13,9 @@
   <!-- Reference NuGet package libsimpleio (https://www.nuget.org/packages/libsimpleio) -->
 
   <ItemGroup>
-    <PackageReference Include="DotNetConfig" Version="1.0.6" />
+    <PackageReference Include="DotNetConfig" Version="1.*" />
     <PackageReference Include="libsimpleio" Version="2.*" />
-    <PackageReference Include="MySql.Data" Version="8.4.0" />
+    <PackageReference Include="MySql.Data" Version="9.*" />
   </ItemGroup>
 
   <!-- Include library assemblies -->
