Changed RASPIUTILS_SRC to RPIUTILS_SRC
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24070 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/initramfs/Makefile
+++ b/bootkernel/initramfs/Makefile
@@ -1110,7 +1110,7 @@ reallyclean: clean
 	rm -rf $(NANO_SRC)
 	rm -rf $(FIRMWARE_SRC)
 	rm -rf $(WIRELESS_REGDB_SRC)
-	rm -rf $(RASPIUTILS_SRC)
+	rm -rf $(RPIUTILS_SRC)
 	rm -f COPYING
 	rm -f config-pin
 	rm -f detach
