Changed CONFIG_CRC_CCITT=m to CONFIG_CRC_CCITT=y
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24074 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/RaspberryPi1.config
+++ b/bootkernel/kernel/RaspberryPi1.config
@@ -4385,7 +4385,7 @@ CONFIG_CRYPTO_LIB_SHA1=y
 CONFIG_CRYPTO_LIB_SHA256=y
 # end of Crypto library routines
 
-CONFIG_CRC_CCITT=m
+CONFIG_CRC_CCITT=y
 CONFIG_CRC16=y
 CONFIG_CRC_T10DIF=y
 CONFIG_CRC64_ROCKSOFT=y
