--- a/bootkernel/kernel/RaspberryPi1Gadget.config
+++ b/bootkernel/kernel/RaspberryPi1Gadget.config
@@ -65,7 +65,6 @@ CONFIG_GENERIC_IRQ_PROBE=y
 CONFIG_GENERIC_IRQ_SHOW=y
 CONFIG_GENERIC_IRQ_SHOW_LEVEL=y
 CONFIG_HARDIRQS_SW_RESEND=y
-CONFIG_GENERIC_IRQ_CHIP=y
 CONFIG_IRQ_DOMAIN=y
 CONFIG_IRQ_FORCED_THREADING=y
 CONFIG_SPARSE_IRQ=y
@@ -1235,16 +1234,13 @@ CONFIG_ETHERNET=y
 # CONFIG_NET_VENDOR_BROADCOM is not set
 # CONFIG_NET_VENDOR_CADENCE is not set
 # CONFIG_NET_VENDOR_CAVIUM is not set
-CONFIG_NET_VENDOR_CIRRUS=y
-# CONFIG_CS89x0_PLATFORM is not set
+# CONFIG_NET_VENDOR_CIRRUS is not set
 # CONFIG_NET_VENDOR_CORTINA is not set
 # CONFIG_NET_VENDOR_DAVICOM is not set
 # CONFIG_DNET is not set
 # CONFIG_NET_VENDOR_ENGLEDER is not set
 # CONFIG_NET_VENDOR_EZCHIP is not set
-CONFIG_NET_VENDOR_FARADAY=y
-# CONFIG_FTMAC100 is not set
-# CONFIG_FTGMAC100 is not set
+# CONFIG_NET_VENDOR_FARADAY is not set
 # CONFIG_NET_VENDOR_FUNGIBLE is not set
 # CONFIG_NET_VENDOR_GOOGLE is not set
 # CONFIG_NET_VENDOR_HISILICON is not set
@@ -3457,14 +3453,14 @@ CONFIG_PWM_PCA9685=y
 #
 CONFIG_IRQCHIP=y
 # CONFIG_AL_FIC is not set
-CONFIG_BRCMSTB_L2_IRQ=y
+# CONFIG_BRCMSTB_L2_IRQ is not set
 # CONFIG_XILINX_INTC is not set
 # end of IRQ chip support
 
 # CONFIG_IPACK_BUS is not set
 CONFIG_RESET_CONTROLLER=y
-CONFIG_RESET_BRCMSTB=y
-CONFIG_RESET_BRCMSTB_RESCAL=y
+# CONFIG_RESET_BRCMSTB is not set
+# CONFIG_RESET_BRCMSTB_RESCAL is not set
 # CONFIG_RESET_GPIO is not set
 # CONFIG_RESET_RASPBERRYPI is not set
 CONFIG_RESET_SIMPLE=y
@@ -3474,14 +3470,14 @@ CONFIG_RESET_SIMPLE=y
 #
 # PHY Subsystem
 #
-# CONFIG_GENERIC_PHY is not set
+CONFIG_GENERIC_PHY=y
 # CONFIG_PHY_CAN_TRANSCEIVER is not set
 
 #
 # PHY drivers for Broadcom platforms
 #
 # CONFIG_BCM_KONA_USB2_PHY is not set
-# CONFIG_PHY_BRCM_USB is not set
+CONFIG_PHY_BRCM_USB=y
 # end of PHY drivers for Broadcom platforms
 
 # CONFIG_PHY_CADENCE_TORRENT is not set
@@ -3531,7 +3527,7 @@ CONFIG_NVMEM_LAYOUTS=y
 # CONFIG_NVMEM_LAYOUT_U_BOOT_ENV is not set
 # end of Layout Types
 
-CONFIG_NVMEM_RASPBERRYPI_OTP=y
+# CONFIG_NVMEM_RASPBERRYPI_OTP is not set
 # CONFIG_NVMEM_RMEM is not set
 
 #
