Imported RabbitMQ client library bindings
From https://github.com/geewiz/rabbitmq_ada


git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24109 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libsimpleio/Makefile
+++ b/toolchain/libsimpleio/Makefile
@@ -60,7 +60,7 @@ compile.done:
 	rm -rf obj
 	mkdir obj
 	ln -s -f $(LIBSIMPLEIO)/c libsimpleio
-	for F in $(LIBSIMPLEIO)/c/*.c ; do $(CC) -Wall -fPIC -I$(shell pwd) -c -o obj/`basename $$F .c`.o $$F ; done
+	for F in $(LIBSIMPLEIO)/c/*.c $(LIBSIMPLEIO)/ada/rabbitmq/*.c ; do $(CC) -Wall -fPIC -I$(shell pwd) -c -o obj/`basename $$F .c`.o $$F ; done
 	touch $@
 
 ###############################################################################
