Restored gpio_server_http to fix broken GPIO sysfs API.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24221 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/initramfs/Makefile
+++ b/bootkernel/initramfs/Makefile
@@ -961,6 +961,7 @@ endif
 	install -cm 0555 autoexec.script			$@/usr/libexec
 	install -cm 0555 ifplugd.script				$@/usr/libexec
 	install -cm 0555 install-overlays			$@/usr/libexec
+	install -cm 0555 mdev-helper-gpio			$@/usr/libexec
 	install -cm 0555 mdev-helper-hidraw			$@/usr/libexec
 	install -cm 0555 mdev-helper-net			$@/usr/libexec
 	install -cm 0555 mdev-helper-pwm			$@/usr/libexec
