--- a/bootkernel/initramfs/mdev.conf
+++ b/bootkernel/initramfs/mdev.conf
@@ -8,7 +8,7 @@ urandom		root:root	444
 zero		root:root	666
 
 # Embedded system devices
-gpiochip.*	root:gpio	660
+gpio.*		root:gpio	660 */usr/libexec/mdev-helper-gpio
 hidraw.*	root:gpio	660 */usr/libexec/mdev-helper-hidraw
 i2c-.*		root:gpio	660
 pwmchip.*	root:gpio	750 */usr/libexec/mdev-helper-pwm
