Changed PROGRAM to PROGRAM_NAME.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24240 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/examples/java/programs/test_adc/Makefile
+++ b/examples/java/programs/test_adc/Makefile
@@ -34,7 +34,7 @@ JAR_COMPONENTS	+= com
 
 # Infer program name from project directory name
 
-PROGRAM	:= $(shell basename `pwd`).jar
+PROGRAM_NAME	:= $(shell basename `pwd`)
 
 # Override the .class rule, to remove debris and include JNA
 
@@ -45,7 +45,7 @@ PROGRAM	:= $(shell basename `pwd`).jar
 
 # Build applicaton program jar file
 
-default: $(PROGRAM)
+default: $(PROGRAM_NAME)
 
 # Remove working files
 
