Use precompiled libsimpleio.jar
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24255 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/gpio-server/clients/java/HTTP/Toggle_Speed/Makefile
+++ b/extensions/gpio-server/clients/java/HTTP/Toggle_Speed/Makefile
@@ -26,9 +26,9 @@ MUNTSOS		?= /usr/local/share/muntsos
 include $(LIBSIMPLEIO)/attic/java/include/java.mk
 
 ifeq ($(OS), Windows_NT)
-JAVAC_CLASSPATH	:= ".;$(LIBSIMPLEIO)/attic/java/classes;$(MUNTSOS)/examples/java/classes"
+JAVAC_CLASSPATH	:= ".;$(MUNTSOS)/examples/java/classes"
 else
-JAVAC_CLASSPATH	:= .:$(LIBSIMPLEIO)/attic/java/classes:$(MUNTSOS)/examples/java/classes
+JAVAC_CLASSPATH	:= .:$(MUNTSOS)/examples/java/classes
 endif
 
 JAR_COMPONENTS	+= com
@@ -41,6 +41,7 @@ PROGRAM	:= $(shell basename `pwd`).jar
 
 %.class: %.java
 	rm -rf $(JAR_COMPONENTS)
+	jar xf $(LIBSIMPLEIO)/attic/java/jars/libsimpleio.jar com/munts
 	$(JAVAC) $(JAVAC_FLAGS) $<
 
 # Build applicaton program jar file
