Restored java/ from the attic.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24258 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/examples/java/programs/test_adc/Makefile
+++ b/examples/java/programs/test_adc/Makefile
@@ -22,7 +22,7 @@
 
 LIBSIMPLEIO	?= /usr/local/share/libsimpleio
 
-include $(LIBSIMPLEIO)/attic/java/include/java.mk
+include $(LIBSIMPLEIO)/java/include/java.mk
 
 JAR_COMPONENTS	+= com
 
@@ -34,8 +34,8 @@ PROGRAM_NAME	:= $(shell basename `pwd`)
 
 %.class: %.java
 	rm -rf $(JAR_COMPONENTS)
-	jar xf $(LIBSIMPLEIO)/attic/java/jars/jna.jar         com/sun
-	jar xf $(LIBSIMPLEIO)/attic/java/jars/libsimpleio.jar com/munts
+	jar xf $(LIBSIMPLEIO)/java/jars/jna.jar         com/sun
+	jar xf $(LIBSIMPLEIO)/java/jars/libsimpleio.jar com/munts
 	$(JAVAC) $(JAVAC_FLAGS) $<
 
 # Override the .manifest rule, to enable native method access
