Restored java/ from the attic.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24259 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/common/Makefile.libsimpleio-common
+++ b/toolchain/common/Makefile.libsimpleio-common
@@ -52,6 +52,7 @@ $(PKGDIR):
 	cp -R -P -p $(LIBSIMPLEIO)/gm2		$(PKGDIR)/usr/local/share/libsimpleio
 	cp -R -P -p $(LIBSIMPLEIO)/go		$(PKGDIR)/usr/local/share/libsimpleio
 	cp -R -P -p $(LIBSIMPLEIO)/include	$(PKGDIR)/usr/local/share/libsimpleio
+	cp -R -P -p $(LIBSIMPLEIO)/java		$(PKGDIR)/usr/local/share/libsimpleio
 	cp -R -P -p $(LIBSIMPLEIO)/python	$(PKGDIR)/usr/local/share/libsimpleio
 	mkdir -p				$(PKGDIR)/usr/local/share/libsimpleio/doc
 	install -cm 0644 $(LIBSIMPLEIO)/COPYING	$(PKGDIR)/usr/local/share/libsimpleio/doc
